1998-05-05  Jochen Wiedmann  <joe@ispsoft.de>	(0.1000)

	* Initial version
